# twobody_problem

./: .gitignore  CMakeLists.txt  README.md  Vec2.h  stellar_object.h
docs/: main.tex
docs/sections/: abstract.tex  distance.tex  formulae.tex  grav_acceleration.tex  orbital_velocities.tex  problem_setup.tex  velocity_direction.tex  verlet.tex
include/: Vec2.h  physics.h  stellar_object.h  verlet.h  world.h
latex/: md__r_e_a_d_m_e.tex
scripts/: plot_orbit.py
src/: main.cpp  physics.cpp  verlet.cpp  verlet.h  world.cpp
